[package]
name = "drastical"
version = "0.2.0"
authors = ["atsuzaki <katherinephilip98@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = { version = "1.0.0", features = ["client", "ssl"] }
dotenv = "0.13.0"
futures = "0.1"
env_logger = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
